# gomoku-nea

./: README.md  pyproject.toml  requirements.txt
gomoku/: __main__.py  board.py  colors.py  gui.py  window.py
gomoku/ai/: mcts.py
gomoku/views/: abc.py  browser.py  game.py  menu.py  select.py
