[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gomoku-nea"
version = "0.1.0"
requires-python = ">= 3.9"
dependencies = [
    "PySide6-Essentials",
]
description = "A Gomoku client written in Python. Made for OCR Computer Science NEA (2025-26)."
readme = {file = "README.txt", content-type = "text/markdown"}

[project.urls]
Repository = "https://github.com/rayzchen/gomoku-nea.git"
